# traccia

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: auto-publish.yml  ci.yml
doc/rust/: crates.js  help.html  search-index.js
doc/rust/src/traccia/: level.rs.html  lib.rs.html  strings.rs.html
doc/rust/src/traccia/impl/: mod.rs.html
doc/rust/traccia/: enum.Color.html  enum.LogLevel.html  enum.TargetId.html  fn.init_default.html  index.html  trait.Formatter.html  trait.Logger.html
doc/rust/traccia/hooks/: enum.Hook.html  fn.set_hook.html
doc/rust/traccia/impl/async/: struct.DefaultLogger.html
doc/rust/trait.impl/core/cmp/: trait.PartialEq.js
doc/rust/trait.impl/core/fmt/: trait.Debug.js
doc/rust/trait.impl/core/marker/: trait.Copy.js  trait.UnsafeUnpin.js
doc/rust/trait.impl/core/ops/deref/: trait.Deref.js
docs/: span-positioning-quick-ref.md  spans.md
docs/rust/: settings.html  src-files.js
docs/rust/search.desc/traccia/: traccia-desc-0-.js
docs/rust/src/traccia/: error.rs.html  format.rs.html  hooks.rs.html  macros.rs.html  shutdown.rs.html  target.rs.html  util.rs.html
docs/rust/src/traccia/impl/: async.rs.html
docs/rust/traccia/: all.html  enum.Error.html  enum.FileMode.html  enum.Hook.html  enum.Output.html  fn.init.html  fn.init_with_config.html  fn.logger.html  fn.set_hook.html  macro.debug.html  macro.error.html  macro.fatal.html  macro.info.html  macro.log.html  macro.trace.html  macro.warn.html  sidebar-items.js  struct.Config.html  struct.Console.html  struct.DefaultFormatter.html  struct.DefaultLogger.html  struct.File.html  struct.Record.html  trait.Colorize.html  trait.Style.html  trait.Target.html
docs/rust/traccia/error/: enum.Error.html
docs/rust/traccia/format/: struct.DefaultFormatter.html  trait.Formatter.html
docs/rust/traccia/level/: enum.LogLevel.html
docs/rust/traccia/strings/: enum.Color.html  trait.Colorize.html  trait.Style.html
docs/rust/trait.impl/core/clone/: trait.Clone.js
docs/rust/trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialOrd.js
docs/rust/trait.impl/core/convert/: trait.From.js  trait.TryFrom.js
docs/rust/trait.impl/core/default/: trait.Default.js
docs/rust/trait.impl/core/error/: trait.Error.js
docs/rust/trait.impl/core/fmt/: trait.Display.js
docs/rust/trait.impl/core/hash/: trait.Hash.js
docs/rust/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/rust/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/rust/trait.impl/core/str/traits/: trait.FromStr.js
docs/rust/trait.impl/traccia/: trait.Logger.js
examples/: basic.rs  clap.rs  colored-text.rs  custom-format.rs  env.rs  filtered-output.rs  filtered_output.rs  filtering.rs  hooks.rs  level-filtering.rs  output.rs  span-after-level.rs  span-at-start.rs  spans.rs  strings.rs  target.rs  threads.rs
js/: .npmignore  README.md  package.json  tsup.config.ts
js/examples/: demo.js  file.js  formatter.js
js/src/: config.ts  format.ts  index.ts  target.ts  utils.ts
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/examples/: target.rs
rust/src/: level.rs  shutdown.rs
scripts/: gen-docs.sh
src/: color.rs  error.rs  format.rs  hooks.rs  level.rs  lib.rs  macros.rs  shutdown.rs  span.rs  strings.rs  target.rs  util.rs
src/impl/: async.rs  blocking.rs  mod.rs
