[package]
name = "traccia"
version = "2.2.4"
edition = "2024"
authors = ["Saverio Scagnoli <svscagn@gmail.com>"]
description = "A zero-dependency, flexible logging framework for Rust applications"
documentation = "https://docs.rs/traccia"
repository = "https://github.com/saverioscagnoli/traccia/tree/master/rust"
homepage = "https://github.com/saverioscagnoli/traccia/tree/master/rust"
license = "MIT"
readme = "README.md"
keywords = ["logging", "log", "logger", "async", "terminal"]
categories = ["development-tools::debugging"]

exclude = [
    ".vscode",
    ".gitignore",
    "docs",
    "CHANGELOG.md"
]

[features]
default = []
blocking = []
clap = ["dep:clap"]

[dependencies]
clap = { version = "4.x", features = ["derive"], optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["blocking", "clap"]

[[example]]
name = "basic"
required-features = []

[[example]]
name = "clap"
required-features = ["clap"]

[[example]]
name = "custom-format"
required-features = []

[[example]]
name = "filtered-output"
required-features = []

[[example]]
name = "hooks"
required-features = []

[[example]]
name = "level-filtering"
required-features = []

[[example]]
name = "output"
requred-features = []

[[example]]
name = "strings"
required-features = []

[[example]]
name = "target"
required-features = []

[[example]]
name = "threads"
required-features = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
